# claude-ws

./: .gitignore  README.md
.claude/: CLAUDE.md
.github/workflows/: claude-code-review.yml
grocery-assistant/: .gitignore  pyproject.toml
grocery-assistant/grocery_assistant/: analyzer.py  cli.py  display.py  importer.py  models.py  normalizer.py  receipt_parser.py  storage.py
shopping-assistant/: pyproject.toml
shopping-assistant/shopping_assistant/: __init__.py  advisor.py  cli.py  display.py  models.py  scraper.py  storage.py
